Fix: Controller annotation and image path